k8s/GCP/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: mssql
spec:
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
  type: LoadBalancer
